// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.mesh.v2beta1;

import "pbmesh/v2beta1/destinations.proto";
import "pbresource/annotations.proto";

message ComputedDestinations {
  option (hashicorp.consul.resource.spec) = {scope: SCOPE_NAMESPACE};

  // destinations is the list of explicit destinations to define for the selected workloads.
  repeated Destination destinations = 2;
}
